[package]
name = "fast-pased-mp-game"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sdl2 = { version = "0.37.0", features = ["gfx", "ttf"]}
rand = "0.9.0"
font-loader = "0.11"
